business_system/core/transactions/transaction_service/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dibank-transaction-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dibank-transaction-service
      group: dibank
  template:
    metadata:
      labels:
        app: dibank-transaction-service
        group: dibank
    spec:
      containers:
        - name: dibank-transaction-service
          image: dibank-transaction-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8102
